# pipelex-cookbook

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSING.md  Makefile  README.md  REUSE.toml  pipelex.toml  pyproject.toml
.cursor/rules/: check-pipes.mdc  pipes.mdc  pytest.mdc  samples.mdc
.github/workflows/: cla.yml  github-release.yml  lint-check.yml  tests-check.yml
.reuse/templates/: cookbook.jinja2
assets/expense_report/: expense_report_diner.txt  invoice_dejeuner_1.txt  invoice_dejeuner_2.txt  invoice_diner.txt  invoice_flight.txt  invoice_hotel.txt  invoice_trajet.txt
cookbook/quick_start/: README.md  check.py  hello_world.py  summarize_1_simple.py  summarize_1_with_structure copy.py  summarize_2_by_steps.py  summarize_2_topics.py  summarize_simple.py  summarize_topics.py
cookbook/samples/: README.md  expense_report.py  extract_gantt.py  extract_table.py  ocr.py  pdf_1_simple_ocr.py  pdf_2_power_extractor.py  power_extractor.py  power_markdown_extractor.py  simple_ocr.py
cookbook/samples/wip/: README.md  execute_mission.py
cookbook/use_mission/: summarize_mission.py
cookbook/utils/: results_utils.py
core/examples/: README.md  expense_report.py  extract_gantt.py  extract_table.py  pdf_1_simple_ocr.py  pdf_2_power_extractor.py
core/examples/wip/: execute_mission.py
core/quick_start/: README.md  check.py  hello_world.py  summarize_1_simple.py  summarize_2_topics.py
data/: sample_text_1.txt  sample_text_2.txt  sample_text_3.txt
data/expense_report/: expense_report.txt  expense_report_flight.txt  expense_report_short.txt
pipelex_libraries/pipelines/base_library/: documents.py  documents.toml  questions.py  retrieve.py
pipelex_libraries/pipelines/examples/expense_report/: expense.toml  expense_arbitrage.toml  expense_report.py  expense_report.toml  expense_report_domain.toml  vat.toml
pipelex_libraries/pipelines/examples/expense_report/validation/: validation_mileage.toml  validation_office_supplies.toml  validation_trip.toml
pipelex_libraries/pipelines/examples/extraction/: gantt.py  gantt.toml  tables.py  tables.toml
pipelex_libraries/pipelines/examples/power_extractor/: power_extractor.py  power_extractor.toml
pipelex_libraries/pipelines/expense_report/: employee.toml  invoice.toml
pipelex_libraries/pipelines/expense_report/validation/: validation_restauration.toml
pipelex_libraries/pipelines/extraction/: tables.toml
pipelex_libraries/pipelines/images/: image_analysis.py  image_analysis.toml
pipelex_libraries/pipelines/power_extractor/: power_extractor.py  power_extractor.toml  power_markdown_extractor.py
pipelex_libraries/pipelines/quick_start/: example_1.toml  hello_world.toml  summarize.py  summarize.toml
tests/: conftest.py  test_boot.py
tests/asynch/: test_hello_world.py
utils/: results_utils.py
